fix(front): reduce content container width to prevent overlap with sidebar button

--- a/static/css/imagestore.css
+++ b/static/css/imagestore.css
@@ -2,7 +2,7 @@
 
 .container {
     display: flex;
-    width: 100%;
+    width: 90%;
     /* align-items: stretch; */
     font-family: 'Oxygen', sans-serif;
 }
